--- a/jsdoccatalogue.blocks/jsdoc/jsdoc.css
+++ b/jsdoccatalogue.blocks/jsdoc/jsdoc.css
@@ -98,6 +98,7 @@ code
     margin: 0;
     padding: 10px;
     border-top: 1px solid #D5D5D5;
+    border-bottom: 1px solid #D5D5D5;
 }
 
 .heading_level_3
