--- a/jsdoccatalogue.blocks/jsdoc/jsdoc.css
+++ b/jsdoccatalogue.blocks/jsdoc/jsdoc.css
@@ -50,6 +50,9 @@ code
 .jsdoc
 {
     font-family: 'Open Sans';
+    position: relative;
+    top: 45px;
+    padding-bottom: 10px;
 }
 
 .jsdoc__deprecated
@@ -68,8 +71,11 @@ code
     color: #616161;
     font-size: 20px;
     margin: 0;
-    padding: 10px;
-    padding-left: 20px;
+    padding: 10px 10px 10px 20px;
+    width: 100%;
+    position: fixed;
+    border-bottom: 1px solid #B3B1B1;
+    box-shadow: 0 1px 4px #D3D3D3;
 }
 
 .jsdoc__block-name:before
